styles/globals.css
:root {
  --color-primary-dark: #006a6f;
  --color-primary: #00747a;
  --color-primary-light: #72b0b3;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  button {
    @apply tracking-wide rounded-xl;
  }

  ::selection {
    @apply bg-gray-200 bg-opacity-75;
  }

  a {
    @apply text-light-primary font-medium dark:text-dark-primary;
  }

  input[type="text"],
  textarea {
    @apply rounded-xl text-lg transition duration-300 focus:outline-none  shadow-sm  focus:shadow-md border placeholder-gray-400 placeholder-opacity-50;
  }

  textarea {
    @apply resize-none;
  }

  ul li:before {
    content: "\2014";
    @apply inline-block font-bold w-4 h-8 mr-2 dark:text-dark-primary text-light-primary;
  }
}

@layer components {
  .navlink {
    @apply uppercase tracking-wide pb-1 group-hover:text-black dark:group-hover:text-dark-content/90 text-gray-500 dark:text-dark-content text-base font-medium transition duration-300 ease-in-out;
  }

  .menu-link {
    @apply text-black dark:text-dark-content hover:text-primary text-2xl font-light transition-all duration-300 cursor-pointer hover:text-light-primary dark:hover:text-dark-primary;
  }

  .icon-btn {
    @apply z-20 cursor-pointer;
  }

  .project-info-heading {
    @apply text-sm font-semibold tracking-wide uppercase;
  }

  .project-info-content {
    @apply text-lg font-light text-light-content dark:text-dark-content;
  }

  .outline-link {
    @apply flex items-center justify-center md:px-6 py-2 space-x-2 font-semibold uppercase border-2 px-3 md:py-4 md:text-lg text-base rounded-xl bg-light-bgPrimary dark:bg-dark-bgPrimary text-light-primary dark:text-dark-primary border-light-primary dark:border-dark-primary;
  }
}

@layer utilities {
  .btn-primary {
    @apply text-white bg-primary hover:bg-primary-dark;
  }
  .btn-large {
    @apply p-4 text-xl hover:shadow-lg;
  }
  .btn-md {
    @apply p-2.5 text-lg  hover:shadow-md;
  }

  .bg-hero {
    /*background-image: url(https://robor-team.s3.eu-central-1.amazonaws.com/hero-bg-1.svg);*/
    background-image: url("/hero-bg-1.svg");
    @apply mt-12 bg-cover bg-center;
  }
  .bg-form {
    background-image: url(https://robor-team.s3.eu-central-1.amazonaws.com/hero-bg-2.svg);

    @apply bg-cover bg-center;
  }
  .bg-form-dark {
    background-image: url(https://robor-team.s3.eu-central-1.amazonaws.com/form-bg-image.svg);
  }
  .text-blu {
    color: rgb(35, 45, 78);
  }

  .text-shadow {
    /* @apply bg-white rounded-full; */
  }

  .shadow-skew {
    box-shadow: 6px 2px 16px 0px rgba(136, 165, 191, 0.3),
      -6px -2px 16px 0px rgba(255, 255, 255, 1);
  }
  .shadow-skew:hover {
    box-shadow: 3px 3px 6px 0px #ccdbe8 inset,
      -3px -3px 6px 1px rgba(255, 255, 255, 0.5) inset;
  }

  .input-invalid {
    @apply ring-2 ring-red-400 focus:ring-2  focus:ring-red-400 focus:border-red-400  border-red-400;
  }
  .input-valid {
    @apply border-gray-300 focus:ring-2  focus:ring-primary-light focus:border-primary-light;
  }

  .techStackLogo {
    @apply w-12 h-12 sm:w-20 sm:h-20;
  }

  /*snap-scroll*/
  .snap {
    scroll-snap-type: var(--scroll-snap-direction) var(--scroll-snap-constraint);
  }
  .snap-y {
    --scroll-snap-direction: y;
  }
  .snap-mandatory {
    --scroll-snap-constraint: mandatory;
  }
  .snap-start {
    scroll-snap-align: start;
  }
}

/* carousel dots */
.slick-dots li.slick-active button:before {
  display: block !important;
  color: #006a6f !important;
  width: 26px !important;
  font-size: 12px !important;
  background-color: #006a6f;
  border-radius: 10px;
  text-indent: -99999px;
  margin-top: 4px;
  margin-left: 3px;
}

.slick-dots li {
  width: 10px !important;
}
li.slick-active {
  width: 22px !important;
}

.slick-dots li button:before {
  height: 10px !important;
  font-size: 12px !important;
  color: #a0a8bb !important;
  display: inline-block;
  opacity: 1 !important;
}
.slick-prev:before,
.slick-next:before {
  width: 10px !important;
  height: 10px !important;
  font-size: 18px !important;
}
.slick-dots {
  bottom: -44px !important;
}

/* added to set the slides to 100% of the height of the parent container */
.slick-list,
.slick-track,
.slick-slide,
.slick-slide > div {
  height: 100%;
}

